@startuml
' ERD 다이어그램 스타일 지정
!theme plain
hide circle
hide methods
hide stereotypes

' 엔티티 정의
entity "User" as user {
  *id : bigint <<PK>>
  --
  name : varchar
  email : varchar
  created_at : datetime
}

entity "Product" as product {
  *id : bigint <<PK>>
  --
  name : varchar
  price : decimal(10,2)
  stock : int
}

entity "Order" as order {
  *id : bigint <<PK>>
  --
  user_id : bigint <<FK>>
  order_date : datetime
  total_amount : decimal(10,2)
}

entity "OrderItem" as order_item {
  *id : bigint <<PK>>
  --
  order_id : bigint <<FK>>
  product_id : bigint <<FK>>
  quantity : int
  price : decimal(10,2)
}

' 관계 정의
user ||--o{ order : "places"
order ||--o{ order_item : "includes"
product ||--o{ order_item : "appears in"

@enduml